--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "baseUrl": ".",
     "allowSyntheticDefaultImports": true // allows * as Moment not to do it
   },
   "ts-node": {
