--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,24 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.1.0",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "sass": "^1.63.4",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
